# Paddle

./: CMakeLists.txt
cmake/: third_party.cmake
paddle/: CMakeLists.txt
paddle/fluid/distributed/rpc/: CMakeLists.txt  future_wrapper.h  rpc_agent.h  rpc_service.h
paddle/fluid/eager/auto_code_generator/: CMakeLists.txt
paddle/fluid/framework/: CMakeLists.txt
paddle/fluid/framework/ir/: CMakeLists.txt  fused_multi_transformer_encoder_pass.cc  gemm_gate_gelu_rewrite_pass.cc  gemm_gate_gelu_rewrite_pass.h  gemm_gate_gelu_rewrite_pass_tester.cc
paddle/fluid/inference/api/: analysis_predictor.cc  (+1 more)
paddle/fluid/operators/: layer_norm_kernel.cu.h  set_value_op.cc
paddle/fluid/operators/fused/xft/: CMakeLists.txt  matmul_helper.h  small_gemm_test.cpp  test_kernels.cc  xft.cc
paddle/fluid/operators/fused/xft/common/: bfloat16.h  bit_cast.h  float16.h
paddle/fluid/operators/fused/xft/kernels/: CMakeLists.txt  layernorm_kernels.cpp  layernorm_kernels.h  rmsnorm_kernels.cpp  rmsnorm_kernels.h
paddle/fluid/operators/fused/xft/layers/: attention.h  layer_norm.cpp  layer_norm.h  matmul_helper.h  rope_2d.cpp  rotary_embedding.cpp
paddle/fluid/operators/fused/xft/util/: CMakeLists.txt
paddle/fluid/pybind/: CMakeLists.txt  eager_method.cc  pybind.cc
paddle/phi/: CMakeLists.txt
paddle/phi/infermeta/: multiary.cc  multiary.h  unary.cc  unary.h
paddle/phi/kernels/: CMakeLists.txt  log_softmax_kernel.h
patches/brpc/: a.patch  rep.patch
python/paddle/: __init__.py
python/paddle/fluid/: variable_index.py
test/quantization/: test_xft_weight_only.py
(+32 files in other folders)
